CHANGELOG

2023-08-20: Set target, compile, and min SDK to API 33. Add notifications permission to app and upgrade gradle to 8.1, both of which are required for API 33. Split off API_23 branch, as the new permissions system is not backwards-compatible.
2022-08-12: Migrate from support library to androidx. This is a major (and backwards-incompatible) change.
2022-06-22: Remove QUERY_ALL_PACKAGES permission. Turn off suggestions in search bar. Add parsing of compound number-forming elements.
2021-11-09: Add {Qa} to two-letter verb shortlist. New vocabulary from {QelIS boqHarmey}.
2021-10-08: Fix bug with parsing 4-letter complex words containing 2-letter verbs.
2021-10-05: Add ability to suppress display of notes in non-English language.
2021-09-27: Target to API 30 and fix TTS query permission. Fix the "xifan hol" q to Q search bug.
2021-08-09: New vocabulary from qep'a' 2021. Allow user-triggered database update over metered Internet.
2021-04-13: Fix issue where attributes were not displayed in entry title if {pIqaD} is enabled.
2021-04-09: Treat epithets as beings capable of language for the purposes of analysis.
2021-04-07: Add {qolqoS} font.
2021-03-28: Fixed bug where inhps words displayed wrong message about plural suffix.
2021-02-22: Minor bug fixes. Added support for Anki decks and KLCP1 vocabulary.
2021-02-06: Improve database upgrade logic.
2020-12-16: New vocabulary from qepHom'a' 2020.
2020-12-02: Add support for Finnish (fi) language.
2020-09-07: Remove some deprecated features. Fix KWOTD bug.
2020-07-17: Handle autotranslated notes.
2020-07-12: Add support for Portuguese (pt) language.
2020-02-23: Add {Saghan}, {-luH}, and {-la'} to grammar analsysi.
2019-07-22: upgrade SDK version to 29. remove build dependency on TTS.
2019-05-24: Update "extended canon" string in en and de, also some other strings in de.
2019-05-03: Fix {ngh} bug.
2019-03-24: Enable edit definition for German when unsupported features are enabled.