@@ -94,6 +94,10 @@ public class KlingonContentDatabase {
   public static final String KEY_NOTES_FI = "notes_fi";
   public static final String KEY_EXAMPLES_FI = "examples_fi";
   public static final String KEY_SEARCH_TAGS_FI = "search_tags_fi";
+  public static final String KEY_DEFINITION_FR = "definition_fr";
+  public static final String KEY_NOTES_FR = "notes_fr";
+  public static final String KEY_EXAMPLES_FR = "examples_fr";
+  public static final String KEY_SEARCH_TAGS_FR = "search_tags_fr";
 
   // The order of the keys to access the columns.
   public static final int COLUMN_ID = 0;
@@ -139,6 +143,10 @@ public class KlingonContentDatabase {
   public static final int COLUMN_NOTES_FI = 38;
   public static final int COLUMN_EXAMPLES_FI = 39;
   public static final int COLUMN_SEARCH_TAGS_FI = 40;
+  public static final int COLUMN_DEFINITION_FR = 41;
+  public static final int COLUMN_NOTES_FR = 42;
+  public static final int COLUMN_EXAMPLES_FR = 43;
+  public static final int COLUMN_SEARCH_TAGS_FR = 44;
 
   // All keys.
   public static final String[] ALL_KEYS = {
@@ -183,6 +191,10 @@ public class KlingonContentDatabase {
     KEY_NOTES_FI,
     KEY_EXAMPLES_FI,
     KEY_SEARCH_TAGS_FI,
+    KEY_DEFINITION_FR,
+    KEY_NOTES_FR,
+    KEY_EXAMPLES_FR,
+    KEY_SEARCH_TAGS_FR,
   };
 
   // The name of the database and the database object for accessing it.
@@ -194,7 +206,7 @@ public class KlingonContentDatabase {
 
   // This should be kept in sync with the version number in the data/VERSION
   // file used to generate the database which is bundled into the app.
-  private static final int BUNDLED_DATABASE_VERSION = 202308181;
+  private static final int BUNDLED_DATABASE_VERSION = 202311200;
 
   // Metadata about the installed database, and the updated database, if any.
   public static final String KEY_INSTALLED_DATABASE_VERSION = "installed_database_version";
@@ -210,7 +222,7 @@ public class KlingonContentDatabase {
   // the IDs of the first entry and one past the ID of the last non-hypothetical,
   // non-extended-canon entry in the database, respectively.
   private static final int ID_OF_FIRST_ENTRY = 10000;
-  private static final int ID_OF_FIRST_EXTRA_ENTRY = 15299;
+  private static final int ID_OF_FIRST_EXTRA_ENTRY = 15346;
 
   private final KlingonDatabaseOpenHelper mDatabaseOpenHelper;
   private static final HashMap<String, String> mColumnMap = buildColumnMap();
@@ -857,6 +869,12 @@ public class KlingonContentDatabase {
                   ? KlingonContentDatabase.KEY_SEARCH_TAGS_FI
                   : KlingonContentDatabase.KEY_DEFINITION_FI;
           break;
+        case "fr":
+          key =
+              useSearchTags
+                  ? KlingonContentDatabase.KEY_SEARCH_TAGS_FR
+                  : KlingonContentDatabase.KEY_DEFINITION_FR;
+          break;
       }
     }
 
@@ -1157,6 +1175,10 @@ public class KlingonContentDatabase {
       entry.getNotes_FI(),
       entry.getExamples_FI(),
       entry.getSearchTags_FI(),
+      entry.getDefinition_FR(),
+      entry.getNotes_FR(),
+      entry.getExamples_FR(),
+      entry.getSearchTags_FR(),
     };
   }
 
@@ -1203,6 +1225,10 @@ public class KlingonContentDatabase {
       entry.getNotes_FI(),
       entry.getExamples_FI(),
       entry.getSearchTags_FI(),
+      entry.getDefinition_FR(),
+      entry.getNotes_FR(),
+      entry.getExamples_FR(),
+      entry.getSearchTags_FR(),
     };
   }
 
