@@ -145,6 +145,7 @@
     <string name="secondary_language_chinese_hong_kong">jungwoq Hol Hong qong Sep Hol Sar (ngong)</string>
     <string name="secondary_language_portuguese">portughal Hol</string>
     <string name="secondary_language_finnish">SuwomIy Hol</string>
+    <string name="secondary_language_french">vIraS Hol (ngong)</string>
 
     <!-- Bottom navigation menu. -->
     <string name="menu_previous">vorgh</string>
