@@ -1,5 +1,6 @@
 CHANGELOG
 
+2023-11-20: Add support for French (fr) language.
 2023-08-20: Set target, compile, and min SDK to API 33. Add notifications permission to app and upgrade gradle to 8.1, both of which are required for API 33. Split off API_23 branch, as the new permissions system is not backwards-compatible.
 2022-08-12: Migrate from support library to androidx. This is a major (and backwards-incompatible) change.
 2022-06-22: Remove QUERY_ALL_PACKAGES permission. Turn off suggestions in search bar. Add parsing of compound number-forming elements.
